--- a/client/src/components/Post/styles.styl
+++ b/client/src/components/Post/styles.styl
@@ -11,6 +11,7 @@
   height 160px
   padding 10px
   position relative
+  box-sizing border-box
 
 .post-content-left,
 .post-content-right
@@ -23,7 +24,7 @@
 
 .post-content-right
   width 20%
-  height 96%
+  height 100%
   position absolute
   top 0
   right 0
@@ -33,33 +34,36 @@
   position absolute
   top 0
   box-sizing border-box
+  font-family Montserrat-500
 
 .post-content-left__main
-  margin-top 10px
-  padding 10px 0
+  margin 20px 0
 
 .post-content-left__main-title
   margin-bottom 12px
   font-size 20px
+  font-family Montserrat-700
 
 .post-content-left__main-subtitle
   margin-bottom 8px
   font-size 14px
+  font-family Montserrat-600
 
 .post-content-left__main-content
   position relative
   height 44px
-  line-height 20px
+  line-height 22px
   overflow hidden
+  font-family Montserrat-400
 
 .post-content-left__date
+  margin-top 10px
   font-size 12px
+  font-family Montserrat-500
 
 .post-content-right__image
-  width 100%
-  height 96%
-  margin auto
-  position absolute
-  bottom 0
-  right 0
+  width 200px
+  height 140px
+  margin-left auto
+  margin-top 10px
   background-size cover
