add local fonts

--- a/client/src/components/Post/styles.styl
+++ b/client/src/components/Post/styles.styl
@@ -54,7 +54,7 @@
   height 44px
   line-height 22px
   overflow hidden
-  font-family Montserrat-400
+  font-family Ambit
 
 .post-content-left__date
   margin-top 10px
