--- a/client/src/styles.styl
+++ b/client/src/styles.styl
@@ -117,6 +117,13 @@
   src: url(https://fonts.gstatic.com/s/changa/v10/2-c79JNi2YuVOUcOarRPgnNGooxCZ62xcjfj8TlaxZKJaw.woff) format('woff');
 }
 
+@font-face {
+  font-family: "Ambit";
+  font-style: normal;
+  font-weight: 400;
+  src: url("/assets/fonts/Ambit-Italic.ttf");
+}
+
 html, body, #app
   height 100%
   background-color #fcfcfc
