--- a/client/src/styles.styl
+++ b/client/src/styles.styl
@@ -121,7 +121,7 @@
   font-family: "Ambit";
   font-style: normal;
   font-weight: 400;
-  src: url("/assets/fonts/Ambit-Italic.ttf");
+  src: url("/fonts/Ambit-Italic.ttf");
 }
 
 html, body, #app
