--- a/client/src/styles.styl
+++ b/client/src/styles.styl
@@ -1,43 +1,113 @@
 @font-face {
-  font-family: Molengo;
-  font-style: normal;
-  font-weight: 400;
-  src: local('Molengo'), local('Molengo-Regular'), url(https://fonts.gstatic.com/s/molengo/v11/I_uuMpWeuBzZNBtQXbNakwKso5c.woff2) format('woff2');
+  font-family: 'Montserrat-italic-100';
+  font-style: italic;
+  font-weight: 100;
+  font-display: swap;
+  src: url(https://fonts.gstatic.com/s/montserrat/v15/JTUOjIg1_i6t8kCHKm459WxZqh7k29NfpiOj.woff2) format('woff2');
 }
 
 @font-face {
-  font-family: Grandstander;
-  font-style: normal;
-  font-weight: 400;
-  src: url(https://fonts.gstatic.com/s/grandstander/v2/ga6fawtA-GpSsTWrnNHPCSIMZhhKpFjyNZIQD1--P3_csfNDiQhJYQ.woff) format('woff');
+  font-family: 'Montserrat-italic-200';
+  font-style: italic;
+  font-weight: 200;
+  font-display: swap;
+  src: url(https://fonts.gstatic.com/s/montserrat/v15/JTUPjIg1_i6t8kCHKm459WxZBg_z_PZwjimrqw.woff2) format('woff2');
 }
 
 @font-face {
-  font-family: Dosis-Regular;
-  font-style: normal;
-  font-weight: 400;
-  src: local('Dosis'), local('Dosis-Regular'), url(https://fonts.gstatic.com/s/dosis/v18/HhyaU5sn9vOmLzloC_WoEoZK.woff2) format('woff2');
+  font-family: 'Montserrat-italic-300';
+  font-style: italic;
+  font-weight: 300;
+  font-display: swap;
+  src: url(https://fonts.gstatic.com/s/montserrat/v15/JTUPjIg1_i6t8kCHKm459WxZYgzz_PZwjimrqw.woff2) format('woff2');
 }
 
 @font-face {
-  font-family: Dosis-Medium;
+  font-family: 'Montserrat-italic-400';
+  font-style: italic;
+  font-weight: 400;
+  font-display: swap;
+  src: url(https://fonts.gstatic.com/s/montserrat/v15/JTUQjIg1_i6t8kCHKm459WxRyS7m0dR9pA.woff2) format('woff2');
+}
+
+@font-face {
+  font-family: 'Montserrat-italic-500';
+  font-style: italic;
+  font-weight: 500;
+  font-display: swap;
+  src: url(https://fonts.gstatic.com/s/montserrat/v15/JTUPjIg1_i6t8kCHKm459WxZOg3z_PZwjimrqw.woff2) format('woff2');
+}
+
+@font-face {
+  font-family: 'Montserrat-italic-600';
+  font-style: italic;
+  font-weight: 600;
+  font-display: swap;
+  src: url(https://fonts.gstatic.com/s/montserrat/v15/JTUPjIg1_i6t8kCHKm459WxZFgrz_PZwjimrqw.woff2) format('woff2');
+}
+
+@font-face {
+  font-family: 'Montserrat-italic-700';
+  font-style: italic;
+  font-weight: 700;
+  font-display: swap;
+  src: url(https://fonts.gstatic.com/s/montserrat/v15/JTUPjIg1_i6t8kCHKm459WxZcgvz_PZwjimrqw.woff2) format('woff2');
+}
+
+@font-face {
+  font-family: 'Montserrat-100';
+  font-style: normal;
+  font-weight: 100;
+  font-display: swap;
+  src: url(https://fonts.gstatic.com/s/montserrat/v15/JTUQjIg1_i6t8kCHKm45_QpRyS7m0dR9pA.woff2) format('woff2');
+}
+
+@font-face {
+  font-family: 'Montserrat-200';
+  font-style: normal;
+  font-weight: 200;
+  font-display: swap;
+  src: url(https://fonts.gstatic.com/s/montserrat/v15/JTURjIg1_i6t8kCHKm45_aZA3gnD_vx3rCs.woff2) format('woff2');
+}
+
+@font-face {
+  font-family: 'Montserrat-300';
+  font-style: normal;
+  font-weight: 300;
+  font-display: swap;
+  src: url(https://fonts.gstatic.com/s/montserrat/v15/JTURjIg1_i6t8kCHKm45_cJD3gnD_vx3rCs.woff2) format('woff2');
+}
+
+@font-face {
+  font-family: 'Montserrat-400';
+  font-style: normal;
+  font-weight: 400;
+  font-display: swap;
+  src: url(https://fonts.gstatic.com/s/montserrat/v15/JTUSjIg1_i6t8kCHKm459WlhyyTh89Y.woff2) format('woff2');
+}
+
+@font-face {
+  font-family: 'Montserrat-500';
   font-style: normal;
   font-weight: 500;
-  src: local('Dosis'), local('Dosis-Medium'), url(https://fonts.gstatic.com/s/dosis/v18/HhyaU5sn9vOmLzloC_WoEoZK.woff2) format('woff2');
+  font-display: swap;
+  src: url(https://fonts.gstatic.com/s/montserrat/v15/JTURjIg1_i6t8kCHKm45_ZpC3gnD_vx3rCs.woff2) format('woff2');
 }
 
 @font-face {
-  font-family: Dosis-Bold;
+  font-family: 'Montserrat-600';
   font-style: normal;
   font-weight: 600;
-  src: local('Dosis'), local('Dosis-Bold'), url(https://fonts.gstatic.com/s/dosis/v18/HhyaU5sn9vOmLzloC_WoEoZK.woff2) format('woff2');
+  font-display: swap;
+  src: url(https://fonts.gstatic.com/s/montserrat/v15/JTURjIg1_i6t8kCHKm45_bZF3gnD_vx3rCs.woff2) format('woff2');
 }
 
 @font-face {
-  font-family: Dosis-Exra-Bolds;
+  font-family: 'Montserrat-700';
   font-style: normal;
   font-weight: 700;
-  src: local('Dosis'), local('Dosis-Exra-Bolds'), url(https://fonts.gstatic.com/s/dosis/v18/HhyaU5sn9vOmLzloC_WoEoZK.woff2) format('woff2');
+  font-display: swap;
+  src: url(https://fonts.gstatic.com/s/montserrat/v15/JTURjIg1_i6t8kCHKm45_dJE3gnD_vx3rCs.woff2) format('woff2');
 }
 
 @font-face {
@@ -47,9 +117,17 @@
   src: url(https://fonts.gstatic.com/s/changa/v10/2-c79JNi2YuVOUcOarRPgnNGooxCZ62xcjfj8TlaxZKJaw.woff) format('woff');
 }
 
+@font-face {
+  font-family: "Ambit";
+  font-style: normal;
+  font-weight: 400;
+  src: url("/fonts/Ambit-Italic.ttf");
+}
+
 html, body, #app
   height 100%
   background-color #fcfcfc
 
+h2,
 p
   margin 0
